# bear-trap

./: .env.example  .gitignore  .gitmodules  AGENTS.md  AUDIT-REPORT.md  Cargo.toml  Dockerfile  README.md  SPEC.md  foundry.toml  remappings.txt
.github/workflows/: ci.yml
.next/: trace
apps/: Cargo.toml
apps/src/: main.rs
backend/: .env.example  Cargo.toml
backend/admin/: Cargo.toml
backend/admin/src/: main.rs
backend/admin/tests/: cli_tests.rs  integration.rs
backend/api/: Cargo.toml
backend/api/src/: main.rs
backend/api/tests/: e2e.rs
backend/prover/: Cargo.toml
backend/prover/src/: lib.rs
backend/shared/: Cargo.toml
backend/shared/src/: db.rs  lib.rs
contracts/scripts/: Deploy.s.sol  DeployTestnet.s.sol  verify.sh
contracts/src/: BearTrap.sol  IBearTrap.sol  ImageID.sol  ZKPEnforcer.sol
contracts/src/mocks/: MockOSO.sol  MockRiscZeroVerifier.sol
contracts/test/: BearTrap.t.sol  Elf.sol  Mocks.t.sol
docs/: UI-UX-GAMEPLAN.md
frontend/: .env.local.example  .env.vercel  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/scripts/: manage-puzzle.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/prove/: route.ts
frontend/src/components/: ActivePuzzle.tsx  BearTrapSVG.tsx  BuyTickets.tsx  ClueDisplay.tsx  CountdownTimer.tsx  DemoControlPanel.tsx  ErrorBoundary.tsx  HallOfSolvers.tsx  IntentVisualizer.tsx  Leaderboard.tsx  PrizeDisplay.tsx  PuzzleCard.tsx  PuzzleList.tsx  Skeleton.tsx  SoundController.tsx  SubmitGuess.tsx  TrapperError.tsx  TrapperMessage.tsx  WalletButton.tsx
frontend/src/hooks/: useEthPrice.ts
frontend/src/lib/: contracts.ts  demo-context.tsx  demo-data.ts  puzzle-flow-context.tsx  sound-engine.ts  useTicketPrice.ts  wagmi.ts  web3authConfig.ts
frontend/src/lib/abi/: bearTrap.ts  delegationManager.ts  erc20.ts
frontend/src/types/: vendor.d.ts
guests/: Cargo.toml  build.rs
guests/puzzle-solver/: Cargo.toml
guests/puzzle-solver/src/: main.rs
guests/tests/: puzzle-solver.rs
scripts/: generate-audio-full.sh  generate-audio.sh
