[workspace]
resolver = "2"
members = ["guests"]
exclude = ["lib", "backend"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Intra-workspace dependencies
guests = { path = "./guests" }

# RISC0 monorepo dependencies
risc0-build = { version = "3.0.3", features = ["docker"] }
risc0-zkvm = { version = "3.0.3", default-features = false }

# RISC0 Ethereum dependencies
risc0-build-ethereum = { version = "3.0.1" }
risc0-ethereum-contracts = { version = "3.0.1" }

alloy = { version = "1.0", default-features = false }
alloy-primitives = { version = "1.0", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "1.0" }
sha2 = { version = "0.10" }
serde = { version = "1.0", features = ["derive", "std"] }

[profile.release]
debug = 1
lto = "thin"
