[workspace]
resolver = "2"
members = ["api", "admin", "prover", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Intra-workspace
shared = { path = "./shared" }
prover = { path = "./prover" }

# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Crypto
sha2 = "0.10"
hex = "0.4"

# Blockchain (for API server)
alloy = { version = "1.0" }
alloy-primitives = { version = "1.0", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "1.0" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
url = "2"

# Boundless / RISC0 (prover crate)
boundless-market = { version = "1.3", default-features = false }
risc0-zkvm = { version = "3.0", default-features = false }

[profile.release]
debug = 1
lto = "thin"

# Use vendored OpenSSL to avoid system dependency


# Vendored OpenSSL — avoid system libssl-dev dependency
[workspace.dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]
