[package]
name = "bear-trap-api"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "bear-trap-api"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }
prover = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
url = { workspace = true }

alloy = { workspace = true, features = ["sol-types", "signers", "signer-local", "provider-http", "network", "contract"] }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }

# Vendored OpenSSL to avoid needing system libssl-dev

[dev-dependencies]
alloy = { workspace = true, features = ["signers", "signer-local"] }
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "macros"] }
