[package]
name = "prover"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# Boundless SDK and RISC0
boundless-market = { version = "1.3", default-features = false }
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

# Vendored OpenSSL to avoid needing system libssl-dev

# Vendored OpenSSL for transitive deps (tokio-tungstenite → native-tls)

